<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.conversor.ConversorActivity">

    <TextView
        android:id="@+id/conversor_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:capitalize="none"
        android:gravity="center"
        android:text="@string/conversor_monedas"
        android:textAllCaps="true"
        android:textColor="@color/ic_launcher_background"
        android:textSize="34sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/logo_image_view"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <TextView
        android:id="@+id/elige_divisa_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/elige_divisa"
        android:textColor="@color/ic_launcher_background"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/elige_divisa_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/cantidad_convertir_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/cantidad_a_convertir"
        android:textColor="@color/ic_launcher_background"
        android:textSize="20sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cantidad_convertir_text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cantidad_convertir_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/valor_inicial"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/divisa_convertir_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/divisa_a_convertir"
        android:textColor="@color/ic_launcher_background"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/divisa_convertir_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/convertir_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/convertir" />

    <TextView
        android:id="@+id/cantidad_convertida_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:text="@string/cantidad_convertida"
        android:textAllCaps="true"
        android:textColor="@color/ic_launcher_background"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>